--- a/templates/playlistCard.hbs
+++ b/templates/playlistCard.hbs
@@ -1,15 +1,18 @@
 <div id="{{id}}-playlist-card" class="playlist-card">
   <div class="playlist-card-content">
     <div class="playlist-card-title" title="{{title}}">{{title}}</div>
-    <div class="playlist-card-mode-icon">
-      <i class="fas fa-compress-arrows-alt inactive"></i>
-      <i class="far fa-arrow-alt-circle-right inactive"></i>
-      <i class="fas fa-random inactive"></i>
-      <i class="fas fa-ban inactive"></i>
+    <div class="playlist-card-icons">
+      <div class="playlist-card-mode-icon">
+        <i class="fas fa-compress-arrows-alt inactive"></i>
+        <i class="far fa-arrow-alt-circle-right inactive"></i>
+        <i class="fas fa-random inactive"></i>
+        <i class="fas fa-ban inactive"></i>
+      </div>
+      <div class="playlist-card-button">
+        <i class="fas fa-pause"></i>
+        <i class="fas fa-play inactive"></i>
+      </div>
     </div>
-    <div class="playlist-card-button">
-      <i class="fas fa-pause"></i>
-      <i class="fas fa-play inactive"></i>
-    </div>
+
   </div>
 </div>
