--- a/templates/playlistCard.hbs
+++ b/templates/playlistCard.hbs
@@ -3,14 +3,14 @@
     <div class="playlist-card-title" title="{{title}}">{{title}}</div>
     <div class="playlist-card-icons">
       <div class="playlist-card-mode-icon">
-        <i class="fas fa-compress-arrows-alt inactive"></i>
-        <i class="far fa-arrow-alt-circle-right inactive"></i>
-        <i class="fas fa-random inactive"></i>
-        <i class="fas fa-ban inactive"></i>
+        <i class="fas fa-compress-arrows-alt pm-inactive"></i>
+        <i class="far fa-arrow-alt-circle-right pm-inactive"></i>
+        <i class="fas fa-random pm-inactive"></i>
+        <i class="fas fa-ban pm-inactive"></i>
       </div>
-      <div class="playlist-card-button">
-        <i class="fas fa-pause"></i>
-        <i class="fas fa-play inactive"></i>
+      <div class="pm-icon" data-icon="playPause">
+        <i class="fas fa-play"></i>
+        <i class="fas fa-pause pm-inactive"></i>
       </div>
     </div>
 
