--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -55,34 +55,34 @@
 
         {{! Controls }}
         <div class="pretty-mixer-global-audio-controls-button-container">
-          <div class="pretty-mixer-global-audio-controls-button">
+          <div class="pm-icon" data-icon="shuffle">
             <i class="fas fa-shuffle"></i>
           </div>
-          <div class="pretty-mixer-global-audio-controls-button">
+          <div class="pm-icon" data-icon="backward-step">
             <i class="fas fa-backward-step"></i>
           </div>
-          <div class="pretty-mixer-global-audio-controls-button">
+          <div class="pm-icon" data-icon="play">
             <i class="fas fa-play"></i>
           </div>
           {{! todo <i class="fas fa-pause"></i> }}
-          <div class="pretty-mixer-global-audio-controls-button">
+          <div class="pm-icon" data-icon="forward-step">
             <i class="fas fa-forward-step"></i>
           </div>
-          <div class="pretty-mixer-global-audio-controls-button">
+          <div class="pm-icon" data-icon="repeat">
             <i class="fas fa-repeat"></i>
           </div>
         </div>
 
         {{! Volume }}
         <div class="pretty-mixer-global-audio-controls-volume-container">
-          <div class="pretty-mixer-global-audio-controls-button">
+          <div class="pm-icon" data-icon="volume">
             <i class="fas fa-volume"></i>
           </div>
           {{! volume-bar }}
           <input
             type="range"
             id="current-song-progressbar"
-            class="pretty-mixer-global-audio-controls-song-progressbar"
+            class="pm-volume-bar"
             min="0"
             max="{{currentlyPlayingSongDuration}}"
             data-bind="value: currentlyPlayingSongProgress"
