--- a/templates/playlistDetails.hbs
+++ b/templates/playlistDetails.hbs
@@ -1,4 +1,4 @@
-<div id="playlist-details">
+<div id="playlist-details" class="playlist-details">
   {{! header }}
   <div class="playlist-details-header">
     {{! back-button }}
