--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -1,4 +1,4 @@
-<div id="pretty-mixer" class="pretty-mixer">
+<div class="pretty-mixer">
   {{! Playlist overview }}
   <div id="playlist-overview-anchor" class="playlist-overview-container">
     {{! Music-Playlists }}
