--- a/styles/playlistDetails.css
+++ b/styles/playlistDetails.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color-primary);
+  border-radius: 20px;
 }
 
 .playlist-details-header {
