fix: header style

--- a/templates/playlistDetails.hbs
+++ b/templates/playlistDetails.hbs
@@ -2,7 +2,7 @@
   {{! header }}
   <div class="playlist-details-header">
     {{! back-button }}
-    <div class="pm-icon" data-button-type="back">
+    <div class="pm-icon playlist-details-header-icon" data-button-type="back">
       <i class="fas fa-chevron-left"></i>
     </div>
 
@@ -10,11 +10,11 @@
 
     <div class="playlist-details-header-configurations">
       {{! add-button}}
-      <div class="pm-icon" data-button-type="add">
+      <div class="pm-icon playlist-details-header-icon" data-button-type="add">
         <i class="fas fa-plus"></i>
       </div>
       {{! edit-button }}
-      <div class="pm-icon" data-button-type="edit">
+      <div class="pm-icon playlist-details-header-icon" data-button-type="edit">
         <i class="fas fa-ellipsis-vertical"></i>
       </div>
     </div>
