--- a/styles/playlistDetails.css
+++ b/styles/playlistDetails.css
@@ -4,6 +4,8 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
+  padding: 5px 20px;
+  color: var(--text-color-primary);
   background-color: var(--background-color-primary);
   border-radius: 20px;
 }
@@ -11,8 +13,14 @@
 .playlist-details-header {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
+}
+
+.playlist-details-header-icon {
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 .playlist-details-header-title {
@@ -29,4 +37,6 @@
   display: flex;
   flex-flow: row wrap;
   gap: 10px;
+  width: 100%;
+  height: 100%;
 }
