refactor: dialog controls and styling

--- a/templates/playlistDetails.hbs
+++ b/templates/playlistDetails.hbs
@@ -6,7 +6,7 @@
       <i class="fas fa-chevron-left"></i>
     </div>
 
-    <h2 class="playlist-details-header-title">{{title}}</h2>
+    <div class="playlist-details-header-title">{{title}}</div>
 
     <div class="playlist-details-header-configurations">
       {{! add-button}}
