WIP: code backup

--- a/templates/songInfo.hbs
+++ b/templates/songInfo.hbs
@@ -21,8 +21,8 @@
       type="range"
       class="pm-volume-bar"
       min="0"
-      max="{{currentlyPlayingSongDuration}}"
-      data-bind="value: currentlyPlayingSongProgress"
+      max="100"
+      value="{{currentVolume}}"
     />
     {{! play/pause }}
     <div class="pm-icon" data-icon="play">
