--- a/styles/songInfo.css
+++ b/styles/songInfo.css
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 24.48%;
+  height: 15%;
   padding: 5px;
+  padding: 5px 10px;
   background-color: var(--menu-color-secondary);
   border-radius: 20px;
 }
@@ -12,10 +15,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
+  font-size: small;
 }
 
 .song-info-body {
   display: flex;
   flex-direction: row;
+  gap: 10px;
+  align-items: center;
   justify-content: space-between;
 }
