--- a/templates/songInfo.hbs
+++ b/templates/songInfo.hbs
@@ -20,8 +20,9 @@
     <input
       type="range"
       class="pm-volume-bar"
-      min="0"
-      max="100"
+      min="0.00"
+      max="1.00"
+      step="0.05"
       value="{{currentVolume}}"
     />
     {{! play/pause }}
