refactor: update volume bar

--- a/styles/module.css
+++ b/styles/module.css
@@ -41,7 +41,12 @@ body {
 }
 
 .pm-icon:hover {
-  color: var(--color-primary);
+  color: var(--color-primary) !important;
+  cursor: pointer;
+}
+
+.pm-icon.pm-enabled {
+  color: var(--color-secondary);
 }
 
 .pm-volume-bar {
