--- a/templates/songInfo.hbs
+++ b/templates/songInfo.hbs
@@ -15,6 +15,7 @@
     {{! volume }}
     <div class="pm-icon" data-icon="volume">
       <i class="fas fa-volume"></i>
+      <i class="fas fa-volume-xmark pm-inactive"></i>
     </div>
     {{! volume-bar }}
     <input
