feat: add stop button to SongInfo

--- a/templates/songInfo.hbs
+++ b/templates/songInfo.hbs
@@ -31,5 +31,7 @@
       <i class="fas fa-play"></i>
       <i class="fas fa-pause pm-inactive"></i>
     </div>
+    {{! stop }}
+    <i class="pm-icon fas fa-stop" data-pm-id="{{id}}" data-icon="stop"></i>
   </div>
 </div>
