--- a/styles/playlistCard.css
+++ b/styles/playlistCard.css
@@ -13,10 +13,15 @@
   gap: 10px;
   align-items: flex-end;
   justify-content: space-between;
-  height: 100px;
   padding-right: 20px;
   padding-bottom: 10px;
   padding-left: 20px;
+}
+
+.playlist-card-buffer {
+  width: 100%;
+  height: 60px;
+  cursor: pointer;
 }
 
 .playlist-card-title {
@@ -24,6 +29,7 @@
   font-size: larger;
   text-overflow: ellipsis;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .playlist-card-icons {
